Created Select Functions

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </ul>
 
     <p class="text">
-       The Calculated fee for <span class="count">3</span> seat is <span id="amount">$60</span> 
+       The Calculated fee for <span id="count">0</span> seat is <span id="amount">0</span>$
     </p>
     <script src="script.js"></script>
     
